--- a/GamePrototype.html
+++ b/GamePrototype.html
@@ -4,7 +4,6 @@
 	<./canvas-->
 	<head>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-		<script src="dialog.js" type ="text/javascript"></script>
 		<title>Exploratory</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
@@ -18,12 +17,12 @@
 		<br />
 		<span id="health">Health:</span>
 		<br />
-		<span id = "str">STR:</span>
-		<span id = "end">END:</span>
-		<span id = "cha">CHA:</span>
-		<span id = "int">INT:</span>
-		<span id = "wis">WIS:</span>
-		<span id = "dex">DEX:</span>
+		STR:<span id = "str"> f </span>
+		END:<span id = "end"> d </span>
+		CHA:<span id = "cha"> s </span>
+		INT:<span id = "int"> g </span>
+		WIS:<span id = "wis"> h </span>
+		DEX:<span id = "dex"> y </span>
 		<br>
 
 		<input value="Inventory" type="button" id="invbtn"onclick="InventoryCheck()">
@@ -62,7 +61,7 @@
 				</input>
 				<span id="choiceD"></span>
 
-				<input value="Continue"type="button" id="datbutton" onclick="continueBASE()">
+				<input value="Continue"type="button" id="continueBtn" onclick="continueBASE()">
 				</input>
 				<span id="a"></span>
 				<input value="Continue"type="button" id="mainbutton" onclick="continuer()">
@@ -92,6 +91,7 @@
 		<div value="Miscellaneous" id = "MiscValue": ></div>
 
 		<div id = "textDiv"></div>
+		<script src="dialog.js" type ="text/javascript"></script>
 	</body>
 	</div>
 </html>
