More delves into jquery and picker reworking
the basis for the random events is being made with the rework of the
choice system, more organization of the code.

--- a/GamePrototype.html
+++ b/GamePrototype.html
@@ -12,7 +12,7 @@
 		<!--button onclick = "startup()">Initialize</button-->
 		<br>
 		<div>
-			Exploratory! Alpha 1.0 "Icecream" build
+			Exploratory! Alpha 0.1.0 "Icecream" build
 		</div>
 		<br />
 		<span id="health">Health:</span>
@@ -64,7 +64,7 @@
 				<input value="Continue"type="button" id="continueBtn" onclick="continueBASE()">
 				</input>
 				<span id="a"></span>
-				<input value="Continue"type="button" id="mainbutton" onclick="continuer()">
+				<input value="Continue"type="button" id="mainContinue" onclick="continuer()">
 				</input>
 				<span id="b"></span>
 				<!--button id="datbutton">Continue</button-->
