--- a/GamePrototype.html
+++ b/GamePrototype.html
@@ -59,7 +59,7 @@
 				<br>
 				<input value="D"type="button" id="btnD" onclick="changeForD()">
 				</input>
-				<span id="choiceD"></span>
+				<span id="choiceD" />
 
 				<input value="Continue"type="button" id="continueBtn" onclick="continueBASE()">
 				</input>
