--- a/GamePrototype.html
+++ b/GamePrototype.html
@@ -17,17 +17,17 @@
 		<br />
 		<span id="health">Health:</span>
 		<br />
-		STR:<span id = "str"> f </span>
-		END:<span id = "end"> d </span>
-		CHA:<span id = "cha"> s </span>
-		INT:<span id = "int"> g </span>
-		WIS:<span id = "wis"> h </span>
-		DEX:<span id = "dex"> y </span>
+		STR:<span id = "str">  </span>
+		END:<span id = "end">  </span>
+		CHA:<span id = "cha">  </span>
+		INT:<span id = "int">  </span>
+		WIS:<span id = "wis">  </span>
+		DEX:<span id = "dex">  </span>
 		<br>
 
 		<input value="Inventory" type="button" id="invbtn"onclick="InventoryCheck()">
 		</input>
-		<input value="Equipped Items" type ="button" id = "equipbtn" onclick="EquipmentCheck()">
+		<input value="Equipped Items" type ="button" id = "equipbtn" onclick="ShowEquip()">
 		</input>
 		<input value="Surroundings Check" type="button"onclick="var xyxx = ayyy">
 		</input>
@@ -63,33 +63,28 @@
 
 				<input value="Continue"type="button" id="continueBtn" onclick="continueBASE()">
 				</input>
-				<span id="a"></span>
-				<input value="Continue"type="button" id="mainContinue" onclick="continuer()">
-				</input>
-				<span id="b"></span>
-				<!--button id="datbutton">Continue</button-->
-				<!--button id="mainbutton">Continue</button-->
+
 
 		</form>
 		<br>
 		<br>
-		<span id = "inventory"></span>
-		<input value="close"type="button"id="closer"onclick="closeFunction()">
+
 		</input>
 		<br>
 		<br>
 		<c value="Equipped" id="EquipDongle"></c>
-		<br>
-		<br>
-		<div value="Head" id = "HeadValue": ></div>
-		<div value="Shoulders:" id="ShoulderValue"></div>
-		<div value="Upper Body" id = "UpperValue": ></div>
-		<div value="Lower Body" id = "LowerValue": ></div>
-		<div value="Hands" id = "HandValue": ></div>
-		<div value="Legs" id = "LegValue": ></div>
-		<div value="Knapsack" id = "KnapValue": ></div>
-		<div value="Miscellaneous" id = "MiscValue": ></div>
-
+		<br />
+		<br />
+		<div value="Head" id ="HeadValue" >Head:</div>
+		<div value="Shoulders:" id="ShoulderValue">Shoulders:</div>
+		<div value="Upper Body" id="UpperValue" >Upper Body:</div>
+		<div value="Lower Body" id="LowerValue" >Lower Body:</div>
+		<div value="Hands" id = "HandValue" >Hands:</div>
+		<div value="Legs" id = "LegValue" >Legs:</div>
+		<div value="Knapsack" id = "KnapValue" >Knapsack:</div>
+		<div value="Miscellaneous" id = "MiscValue" >Miscellaneous:</div>
+		<span id = "inventory"></span>
+		<input value="close"type="button"id="closer"onclick="UniCloser()">
 		<div id = "textDiv"></div>
 		<script src="dialog.js" type ="text/javascript"></script>
 	</body>
