--- a/GamePrototype.html
+++ b/GamePrototype.html
@@ -59,7 +59,7 @@
 				<br>
 				<input value="D"type="button" id="btnD" onclick="changeForD()">
 				</input>
-				<span id="choiceD" />
+				<span id="choiceD"></span>
 
 				<input value="Continue"type="button" id="continueBtn" onclick="continueBASE()">
 				</input>
@@ -72,18 +72,19 @@
 		</input>
 		<br>
 		<br>
-		<c value="Equipped" id="EquipDongle"></c>
+		<span value="Equipped" id="EquipDongle"></span>
+		<span value"Inventory" id="invetoryPrinter"></span>
 		<br />
 		<br />
-		<div value="Head" id ="HeadValue" >Head:</div>
+		<div value="Head" id="HeadValue" >Head:</div>
 		<div value="Shoulders:" id="ShoulderValue">Shoulders:</div>
 		<div value="Upper Body" id="UpperValue" >Upper Body:</div>
 		<div value="Lower Body" id="LowerValue" >Lower Body:</div>
-		<div value="Hands" id = "HandValue" >Hands:</div>
-		<div value="Legs" id = "LegValue" >Legs:</div>
-		<div value="Knapsack" id = "KnapValue" >Knapsack:</div>
-		<div value="Miscellaneous" id = "MiscValue" >Miscellaneous:</div>
-		<span id = "inventory"></span>
+		<div value="Hands" id="HandValue" >Hands:</div>
+		<div value="Legs" id="LegValue" >Legs:</div>
+		<div value="Knapsack" id="KnapValue" >Knapsack:</div>
+		<div value="Miscellaneous" id="MiscValue" >Miscellaneous:</div>
+		<span id="inventory" />
 		<input value="close"type="button"id="closer"onclick="UniCloser()">
 		<div id = "textDiv"></div>
 		<script src="dialog.js" type ="text/javascript"></script>
