xml is still not working
not sure whats wrong, but i will fix this, definetly a big blocker

--- a/GamePrototype.html
+++ b/GamePrototype.html
@@ -72,8 +72,8 @@
 		</input>
 		<br>
 		<br>
-		<span value="Equipped" id="EquipDongle"></span>
-		<span value"Inventory" id="invetoryPrinter"></span>
+		<p id="EquipDongle">empty</p>
+		<p id="invetoryPrinter">Empyt</p>
 		<br />
 		<br />
 		<div value="Head" id="HeadValue" >Head:</div>
