--- a/GamePrototype.html
+++ b/GamePrototype.html
@@ -72,8 +72,8 @@
 		</input>
 		<br>
 		<br>
-		<p id="EquipDongle">empty</p>
-		<p id="invetoryPrinter">Empyt</p>
+		<span id="EquipDongle">empty</span>
+		<span id="invetoryPrinter">Empyt</span>
 		<br />
 		<br />
 		<div value="Head" id="HeadValue" >Head:</div>
@@ -87,6 +87,7 @@
 		<span id="inventory" />
 		<input value="close"type="button"id="closer"onclick="UniCloser()">
 		<div id = "textDiv"></div>
+		
 		<script src="dialog.js" type ="text/javascript"></script>
 	</body>
 	</div>
