xml is close to being fixed
almost there!

--- a/GamePrototype.html
+++ b/GamePrototype.html
@@ -73,7 +73,7 @@
 		<br>
 		<br>
 		<span id="EquipDongle">empty</span>
-		<span id="invetoryPrinter">Empyt</span>
+		<span id="inventoryPrinter">Empyt</span>
 		<br />
 		<br />
 		<div value="Head" id="HeadValue" >Head:</div>
