--- a/GamePrototype.html
+++ b/GamePrototype.html
@@ -31,7 +31,7 @@
 		</input>
 		<input value="Surroundings Check" type="button"onclick="var xyxx = ayyy">
 		</input>
-		<br>
+		<br />
 		<!--button id = "startbutton" onclick = "startadv()">Start</button-->
 		<form>
 			<d value= "Hostile:" id="HostileDongle"></d><span id="enemy"></span>
@@ -43,7 +43,7 @@
 			<div id="log" style="border: ipx solid #ccc;"></div>
 			<div id="action" style="border: ipx solid #ccc;"></div>
 
-			<br>
+			<br />
 			<div data-role="page">
 				<!--div type="reset" value="Reset"></div-->
 				<input value="A"type="button" id="btnA" onclick="changeForA()" />
@@ -72,8 +72,8 @@
 		</input>
 		<br>
 		<br>
-		<span id="EquipDongle">empty</span>
-		<span id="inventoryPrinter">Empyt</span>
+		<span id="EquipDongle"> </span>
+		<span id="inventoryPrinter"> </span>
 		<br />
 		<br />
 		<div value="Head" id="HeadValue" >Head:</div>
@@ -90,5 +90,5 @@
 		
 		<script src="dialog.js" type ="text/javascript"></script>
 	</body>
-	</div>
+
 </html>
