fixing surrounds check

--- a/GamePrototype.html
+++ b/GamePrototype.html
@@ -29,7 +29,7 @@
 		</input>
 		<input value="Equipped Items" type ="button" id = "equipbtn" onclick="ShowEquip()">
 		</input>
-		<input value="Surroundings Check" type="button"onclick="var xyxx = ayyy">
+		<input value="Surroundings Check" type="button" onclick="SurroundCheck()">
 		</input>
 		<br />
 		<!--button id = "startbutton" onclick = "startadv()">Start</button-->
