surroundings check is still being worked on

--- a/GamePrototype.html
+++ b/GamePrototype.html
@@ -17,26 +17,26 @@
 		<br />
 		<span id="health">Health:</span>
 		<br />
-		STR:<span id = "str">  </span>
-		END:<span id = "end">  </span>
-		CHA:<span id = "cha">  </span>
-		INT:<span id = "int">  </span>
-		WIS:<span id = "wis">  </span>
-		DEX:<span id = "dex">  </span>
+		STR:<span id="str">  </span>
+		END:<span id="end">  </span>
+		CHA:<span id="cha">  </span>
+		INT:<span id="int">  </span>
+		WIS:<span id="wis">  </span>
+		DEX:<span id="dex">  </span>
 		<br>
 
 		<input value="Inventory" type="button" id="invbtn"onclick="InventoryCheck()">
 		</input>
-		<input value="Equipped Items" type ="button" id = "equipbtn" onclick="ShowEquip()">
+		<input value="Equipped Items" type="button" id="equipbtn" onclick="ShowEquip()">
 		</input>
 		<input value="Surroundings Check" type="button" onclick="SurroundCheck()">
 		</input>
 		<br />
 		<!--button id = "startbutton" onclick = "startadv()">Start</button-->
 		<form>
-			<d value= "Hostile:" id="HostileDongle"></d><span id="enemy"></span>
+			<span value="Hostile:" id="HostileDongle"></d><span id="enemy"></span>
 			<br />
-			<span id = "enemydesc"></span>
+			<span id="enemydesc"></span>
 			<br />
 			<br />
 			Log: <div id="title" style="border: ipx solid #ccc;"></div>
