--- a/GamePrototype.html
+++ b/GamePrototype.html
@@ -77,7 +77,8 @@
 		<br />
 		<br />
 		<div value="Head" id="HeadValue" >Head:</div>
-		<div value="Shoulders:" id="ShoulderValue">Shoulders:</div>
+		<div value="Left Arm:" id="ShoulderValue">Left Arm:</div>
+		<div value="Right Arm:" id="RightArmValue">Right Arm:</div>
 		<div value="Upper Body" id="UpperValue" >Upper Body:</div>
 		<div value="Lower Body" id="LowerValue" >Lower Body:</div>
 		<div value="Hands" id="HandValue" >Hands:</div>
