--- a/GamePrototype.html
+++ b/GamePrototype.html
@@ -82,7 +82,8 @@
 		<div value="Upper Body" id="UpperValue" >Upper Body:</div>
 		<div value="Lower Body" id="LowerValue" >Lower Body:</div>
 		<div value="Hands" id="HandValue" >Hands:</div>
-		<div value="Legs" id="LegValue" >Legs:</div>
+		<div value="Right Leg" id="RightLegValue" >Right Leg;</div>
+		<div value="Left Leg" id="LeftLegValue" >Right Leg;</div>
 		<div value="Knapsack" id="KnapValue" >Knapsack:</div>
 		<div value="Miscellaneous" id="MiscValue" >Miscellaneous:</div>
 		<span id="inventory" />
