--- a/GamePrototype.html
+++ b/GamePrototype.html
@@ -76,14 +76,14 @@
 		<span id="inventoryPrinter"> </span>
 		<br />
 		<br />
-		<div value="Head" id="HeadValue" >Head:</div>
-		<div value="Left Arm:" id="ShoulderValue">Left Arm:</div>
-		<div value="Right Arm:" id="RightArmValue">Right Arm:</div>
-		<div value="Upper Body" id="UpperValue" >Upper Body:</div>
-		<div value="Lower Body" id="LowerValue" >Lower Body:</div>
-		<div value="Hands" id="HandValue" >Hands:</div>
-		<div value="Right Leg" id="RightLegValue" >Right Leg;</div>
-		<div value="Left Leg" id="LeftLegValue" >Right Leg;</div>
+		<div value="Head" id="HeadValue">Head:</div>
+		<div value="Arms" id="ArmsValue">Arms:</div>
+		<div value="Upperbody" id="UpperbodyValue">Upper Body:</div>
+		<div value="Chest" id="ChestValue">Chest:</div>
+		<div value="Lowerbody" id="LowerbodyValue">Lower Body:</div>
+		<div value="Legs" id="LegsValue">Legs:</div>
+		<div value="Feet" id="FeetValue">Feet:</div>
+		<div value="Gloves" id="GlovesValue">Gloves:</div>
 		<div value="Knapsack" id="KnapValue" >Knapsack:</div>
 		<div value="Miscellaneous" id="MiscValue" >Miscellaneous:</div>
 		<span id="inventory" />
