another hot fix
worked on linking up two javascripts

--- a/GamePrototype.html
+++ b/GamePrototype.html
@@ -34,7 +34,7 @@
 		<br />
 		<!--button id = "startbutton" onclick = "startadv()">Start</button-->
 		<form>
-			<span value="Hostile:" id="HostileDongle"></d><span id="enemy"></span>
+			<span value="Hostile:" id="HostileDongle"><span id="enemy"></span>
 			<br />
 			<span id="enemydesc"></span>
 			<br />
@@ -90,7 +90,9 @@
 		<input value="close"type="button"id="closer"onclick="UniCloser()">
 		<div id = "textDiv"></div>
 		
-		<script src="dialog.js" type ="text/javascript"></script>
+		<script src="dialog.js" type="text/javascript"></script>
+		<script src="combat.js" type="text/javascript"></script>
+		<div value='0' id='divTest '>test</div>
 	</body>
 
 </html>
