--- a/GamePrototype.html
+++ b/GamePrototype.html
@@ -7,7 +7,48 @@
 		<title>Exploratory</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
-	<body>
+	
+	
+	<script>
+
+function setCookie(cname,cvalue,exdays) {
+    var d = new Date();
+    d.setTime(d.getTime() + (exdays*24*60*60*1000));
+    var expires = "expires=" + d.toGMTString();
+    document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
+}
+
+function getCookie(cname) {
+    var name = cname + "=";
+    var ca = document.cookie.split(';');
+    for(var i = 0; i < ca.length; i++) {
+        var c = ca[i];
+        while (c.charAt(0) == ' ') {
+            c = c.substring(1);
+        }
+        if (c.indexOf(name) == 0) {
+            return c.substring(name.length, c.length);
+        }
+    }
+    return "";
+}
+
+function checkCookie() {
+    var user=getCookie("username");
+    if (user != "") {
+        alert("Welcome again " + user);
+    } else {
+       user = prompt("Please enter your name:","");
+       if (user != "" && user != null) {
+           setCookie("username", user, 30);
+       }
+    }
+}
+
+	</script>
+	
+	
+	<body onload="checkCookie()">
 		<br>
 		<!--button onclick = "startup()">Initialize</button-->
 		<br>
@@ -89,9 +130,12 @@
 		<div id = "textDiv"></div>
 		
 		
+		
+		
 		<script src="dialog.js" type="text/javascript"></script>
 		<script src="combat.js" type="text/javascript"></script>
 		<div value='0' id='divTest '>test</div>
+		<span onload="checkCookie()"></span>
 	</body>
 
 </html>
