--- a/GamePrototype.html
+++ b/GamePrototype.html
@@ -48,7 +48,7 @@ setCookie("health", 100, 1);
 			Exploratory! Alpha 0.1.0 "Icecream" build
 		</div>
 		<br />
-		<span id="health">Health:</span><input type=hidden name=heatlh value=""></input>
+		<span id="boop">Health: <span id="health" name=heatlh value="health">   </span></span>
 		<br />
 		STR:<span id="str">  </span>
 		END:<span id="end">  </span>
@@ -107,7 +107,7 @@ setCookie("health", 100, 1);
 		<span id="inventoryPrinter"> </span>
 		<br />
 		<br />
-		<div value="Head" id="HeadValue"></div>
+		<div value="Head" id="HeadValue">Head:</div>
 		<div value="Arms" id="ArmsValue">Arms:</div>
 		<div value="Upperbody" id="UpperbodyValue">Upper Body:</div>
 		<div value="Chest" id="ChestValue">Chest:</div>
@@ -126,7 +126,7 @@ setCookie("health", 100, 1);
 		
 		<script src="dialog.js" type="text/javascript"></script>
 		<script src="combat.js" type="text/javascript"></script>
-		<div value='0' id='divTest '>test</div>
+		<div value='0' id='divTest '>work damnit</div>
 		<span onload="checkCookie()"></span>
 	</body>
 
